1.5/_sources/modules/generated/sklearn.feature_selection.SelectFromModel.rst.txt
SelectFromModel
===============

.. currentmodule:: sklearn.feature_selection

.. autoclass:: SelectFromModel
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.SelectFromModel sklearn.feature_selection.SelectFromModel.__init__ sklearn.feature_selection.SelectFromModel.fit sklearn.feature_selection.SelectFromModel.fit_transform sklearn.feature_selection.SelectFromModel.get_feature_names_out sklearn.feature_selection.SelectFromModel.get_metadata_routing sklearn.feature_selection.SelectFromModel.get_params sklearn.feature_selection.SelectFromModel.get_support sklearn.feature_selection.SelectFromModel.inverse_transform sklearn.feature_selection.SelectFromModel.partial_fit sklearn.feature_selection.SelectFromModel.set_output sklearn.feature_selection.SelectFromModel.set_params sklearn.feature_selection.SelectFromModel.transform 
   :add-heading: Gallery examples
   :heading-level: -